# FastGS

./: .gitignore  README.md  pyproject.toml  requirements.txt  resize.py  run.txt
submodules/diff-gaussian-rasterization_fastgs/: CMakeLists.txt  pyproject.toml  setup.py
submodules/diff-gaussian-rasterization_fastgs/cuda_rasterizer/: forward.cu  rasterizer_impl.h
submodules/fused-ssim/: pyproject.toml
submodules/simple-knn/: pyproject.toml  simple_knn.cu
