[project]
name = "fastgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diff-gaussian-rasterization-fastgs",
    "fused-ssim",
    "plyfile>=1.1.3",
    "simple-knn",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default=true

[tool.uv.workspace]
members = [
    "submodules/diff-gaussian-rasterization_fastgs",
    "submodules/fused-ssim",
    "submodules/simple-knn",
]

[tool.uv.sources]
diff-gaussian-rasterization-fastgs = { workspace = true }
fused-ssim = { workspace = true }
simple-knn = { workspace = true }
