[project]
name = "fastgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja>=1.13.0",
    "plyfile",
    "torch>=2.10.0.dev20251123",
    "torchvision>=0.25.0.dev20251124",
    "tqdm",
    "websockets",
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"
